# satellite-emulator

./: delete_veth_pairs.sh  leo_or_chain_main.py  log_main.py  result.html  start.sh  start_rabbitmq_service.py  start_server.py  topology_main.py
attack/: simulation_topology.py
chain_maker_related/: bc_config_genrator.py  contract_manager.py
command_client/: command_client_unit.py  message_format.py
config/: config_reader.py
const_vars/: const_vars.py
decorator/: time_decorator.py
docker_client/: docker_async_socket.py  docker_client.py  docker_client_api_impl.py  docker_client_http_impl.py  docker_namespace_builder.py
entities/: constellation.py  constellation_type.py  container_information.py  entity.py  ground_station.py  lir_link_identification.py  normal_link.py  normal_node.py  satellite.py
generator/: leo_or_chain_generator.py  subnet_generator.py
images/build_docker_images/: CMakeLists.txt  README.md
images/build_docker_images/headers/: images.h  network_status.h  parser.h
images/build_docker_images/resources/: buaa-login.sh
images/build_docker_images/src/: CMakeLists.txt  main.cpp
images/build_docker_images/src/utility/: CMakeLists.txt  images.cpp  network_status.cpp  parser.cpp
interact/: questions.py  user_interface_for_kernel_reader.py  user_interface_for_leo_or_chain.py  user_interface_for_simulation_topology.py  validator.py
pcap_analyzer/: analyze.sh  pcap_analyzer.py
resources/: back_part_of_bc_file  backup  constellation_config.yml  front_part_of_bc_file  requirements.txt
scripts/: delete_bridge.sh  delete_containers.sh  (+3 more)
(+306 files in other folders)
